--- a/demo/src/main/resources/static/formulario/formulario.html
+++ b/demo/src/main/resources/static/formulario/formulario.html
@@ -96,7 +96,7 @@
             <div id="sintomas-negativos-container"></div>
             <div id="complementarios-container"></div>
         </div>
-        <div class="row margin-filas">
+        <div class="row" style="margin-top: -20px; margin-bottom: 50px;">
             <div class="btn-consultar-formulario">
                 <div class="d-flex justify-content-center">
                     <button class="btn-consultar" id="consultar" onclick="determinar_diagnostico()">
