--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -24,7 +24,7 @@
             </a>
         </div>
         <div class="contenedor">
-            <a href="" class="button">
+            <a href="casos/consultar-casos.html" class="button">
                 <!-- <i class="fas fa-search fa-3x button-icon"></i> -->
                 <i class="fas fa-folder-open fa-3x button-icon"></i>
                 <h2 class="button-title">Consultar Casos</h2>
