Multiselect de Aspecto y afectividad, arreglo en puntaje y código comentado para Sin particularidades

--- a/demo/src/main/resources/static/formulario/sintomasNegativos.html
+++ b/demo/src/main/resources/static/formulario/sintomasNegativos.html
@@ -15,7 +15,8 @@
 
         <div id="negativo-tipo-aspecto" class="form-group margin-filas">
             <h6 for="negativo-tipo-aspecto">Aspecto</h6>
-            <select class="form-control" id="aspecto" name="aspecto" required>
+            <div id="selected-options" class="selected-options"></div>
+            <select class="form-control" id="aspecto" name="aspecto" multiple required>
                 <option value="aspecto-facie">Facie</option>
                 <option value="aspecto-alinio">Aliño</option>
                 <option value="aspecto-aseo">Aseo</option>
@@ -65,7 +66,8 @@
         
         <div id="negativo-tipo-afectividad" class="form-group margin-filas">
             <h6 for="negativo-tipo-afectividad">Afectividad</h6>
-            <select class="form-control" id="afectividad" name="afectividad" required>
+            <div id="selected-options" class="selected-options"></div>
+            <select class="form-control" id="afectividad" name="afectividad" multiple required>
                 <option value="afectividad-eutimia">Eutimia</option>
                 <option value="afectividad-timia-displacentera">Timia displacentera</option>
                 <option value="afectividad-hipertimia-placentera">Hipertimia placentera</option>
