arreglos visuales y boton volver

--- a/demo/src/main/resources/static/casos/consultar-casos.html
+++ b/demo/src/main/resources/static/casos/consultar-casos.html
@@ -34,6 +34,7 @@
                     <th>Nombre</th>
                     <th>Diagnóstico</th>
                     <th>Estado</th>
+                    <th>Fecha de ingreso</th>
                     <th>Acciones</th>
                 </tr>
             </thead>
@@ -41,6 +42,12 @@
                 <!-- Los datos de los pacientes se insertarán aquí -->
             </tbody>
         </table>
+    </div>
+    
+    <div class="btn-volver-container">
+        <button class="btn-volver" id="volver" onclick="volver()">
+            Volver
+        </button>
     </div>
 
     <script src="consultar-casos.js"></script>
