fix responsive, sexo no obligatorio y carga de imagen y limpio el codigo

--- a/demo/src/main/resources/static/formulario/formulario.html
+++ b/demo/src/main/resources/static/formulario/formulario.html
@@ -106,9 +106,9 @@
             </div>
         </div>
 
-        <!-- Popup -->
+        <!-- region Popup -->
         <div id="diagnostico-popup"></div>
-        <!-- End Popup -->
+        <!-- endregion Popup -->
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
