fix errores varios

--- a/demo/src/main/resources/static/formulario/sintomasNegativos.html
+++ b/demo/src/main/resources/static/formulario/sintomasNegativos.html
@@ -58,7 +58,7 @@
                 <option value="actividad-interceptacion-cinetica">Interceptación cinética</option>
                 <option value="actividad-negativismo">Negativismo</option>
                 <option value="actividad-obediencia-automatica">Obediencia automática</option>
-                <option value="actividad-flexibilidad-cerea">Flexibilidad cerea</option>
+                <option value="actividad-flexibilidad-cerea">Flexibilidad cérea</option>
                 <option value="-1" selected>Seleccioná una opción</option>
             </select>
         </div>
