--- a/demo/src/main/resources/static/formulario/formulario.html
+++ b/demo/src/main/resources/static/formulario/formulario.html
@@ -84,7 +84,7 @@
                     <div id="error-transtorno-bipolar" class="error-message-text"></div>
                 </div>
                 <div class="form-group margin-filas opciones">
-                    <h6 for="antecedentes-familiares">Antecedentes Familiares Psiquiatricos</h6>
+                    <h6 for="antecedentes-familiares">Antecedentes Familiares Psiquiátricos</h6>
                     <div class="btn-group">
                         <button id="antecedentes-familiares-si" class="btn btn-choice mb-2">Sí</button>
                         <button id="antecedentes-familiares-no" class="btn btn-choice mb-2">No</button>
