sexo no especifica

--- a/demo/src/main/resources/static/formulario/formulario.html
+++ b/demo/src/main/resources/static/formulario/formulario.html
@@ -34,6 +34,7 @@
                         <select class="form-control" id="sexo" name="sexo" required>
                             <option value="Femenino">Femenino</option>
                             <option value="Masculino">Masculino</option>
+                            <option value="No-especifica">No especifica</option>
                             <option value="-1" selected>Seleccionar sexo</option>
                         </select>
                     </div>
