arreglo mensaje para menu "Exportar Datos"

--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -36,7 +36,7 @@
               <i class="fas fa-solid fa-file-contract fa-3x button-icon"></i>
                 <!-- <i class="fas fa-solid fa-file-export fa-3x button-icon"></i> -->
                 <h2 class="button-title">Exportar Datos</h2>
-                <p class="button-description">Consulta casos previamente registrados.</p>
+                <p class="button-description">Descarga el Data Set generado.</p>
             </a>
         </div>
     </div>
