--- a/demo/src/main/resources/static/formulario/diagnostico.html
+++ b/demo/src/main/resources/static/formulario/diagnostico.html
@@ -11,13 +11,13 @@
             <h3>Diagnóstico para <span id="nombre-paciente"></span>:</h3>
             <div class="diagnostico-texto">
                 <h3 id="posible-esquizofrenia" class="posibilidad-seccion posible-esquizofrenia">
-                    <strong> Existe posibilidad de esquizofrenia</strong>
+                    <strong>Esquizofrenia Posible</strong>
                 </h3>
                 <h3 id="evaluar-temporal" class="posibilidad-seccion evaluar-temporal">
-                    <strong> Evaluar esquizofrenia temporal</strong>
+                    <strong>Evaluar esquizofrenia temporal</strong>
                 </h3>
                 <h3 id="no-posible-esquizofrenia" class="posibilidad-seccion no-posible-esquizofrenia">
-                    <strong> No existe posibilidad de esquizofrenia</strong>
+                    <strong>Esquizofrenia no posible</strong>
                 </h3>
             </div>
         </div>
