--- a/demo/src/main/resources/static/formulario/formulario.html
+++ b/demo/src/main/resources/static/formulario/formulario.html
@@ -43,46 +43,46 @@
 
             <div class="col-md-3 btn-bool">
                 <div class="form-group margin-filas opciones">
-                    <h6 for="transtorno-autista">Trastorno del Espectro Autista</h6>
+                    <h6 for="trastorno-autista">Trastorno del Espectro Autista</h6>
                     <div class="btn-group">
-                        <button id="transtorno-autista-si" class="btn btn-choice mb-2">Sí</button>
-                        <button id="transtorno-autista-no" class="btn btn-choice mb-2">No</button>
+                        <button id="trastorno-autista-si" class="btn btn-choice mb-2">Sí</button>
+                        <button id="trastorno-autista-no" class="btn btn-choice mb-2">No</button>
                     </div>
-                    <div id="error-transtorno-autista" class="error-message-text"></div>
+                    <div id="error-trastorno-autista" class="error-message-text"></div>
                 </div>
                 <div class="form-group margin-filas opciones">
-                    <h6 for="transtorno-comunicacion">Trastorno de la Comunicación en la Infancia</h6>
+                    <h6 for="trastorno-comunicacion">Trastorno de la Comunicación en la Infancia</h6>
                     <div class="btn-group">
-                        <button id="transtorno-comunicacion-si" class="btn btn-choice mb-2">Sí</button>
-                        <button id="transtorno-comunicacion-no" class="btn btn-choice mb-2">No</button>
+                        <button id="trastorno-comunicacion-si" class="btn btn-choice mb-2">Sí</button>
+                        <button id="trastorno-comunicacion-no" class="btn btn-choice mb-2">No</button>
                     </div>
-                    <div id="error-transtorno-comunicacion" class="error-message-text"></div>
+                    <div id="error-trastorno-comunicacion" class="error-message-text"></div>
                 </div>
                 <div class="form-group margin-filas opciones">
-                    <h6 for="transtorno-esquizoafectivo">Trastorno Esquizoafectivo</h6>
+                    <h6 for="trastorno-esquizoafectivo">Trastorno Esquizoafectivo</h6>
                     <div class="btn-group">
-                        <button id="transtorno-esquizoafectivo-si" class="btn btn-choice mb-2">Sí</button>
-                        <button id="transtorno-esquizoafectivo-no" class="btn btn-choice mb-2">No</button>
+                        <button id="trastorno-esquizoafectivo-si" class="btn btn-choice mb-2">Sí</button>
+                        <button id="trastorno-esquizoafectivo-no" class="btn btn-choice mb-2">No</button>
                     </div>
-                    <div id="error-transtorno-esquizoafectivo" class="error-message-text"></div>
+                    <div id="error-trastorno-esquizoafectivo" class="error-message-text"></div>
                 </div>
             </div>
             <div class="col-md-3 btn-bool">
                 <div class="form-group margin-filas opciones">
-                    <h6 for="transtorno-depresivo">Trastorno Depresivo</h6>
+                    <h6 for="trastorno-depresivo">Trastorno Depresivo</h6>
                     <div class="btn-group">
-                        <button id="transtorno-depresivo-si" class="btn btn-choice mb-2">Sí</button>
-                        <button id="transtorno-depresivo-no" class="btn btn-choice mb-2">No</button>
+                        <button id="trastorno-depresivo-si" class="btn btn-choice mb-2">Sí</button>
+                        <button id="trastorno-depresivo-no" class="btn btn-choice mb-2">No</button>
                     </div>
-                    <div id="error-transtorno-depresivo" class="error-message-text"></div>
+                    <div id="error-trastorno-depresivo" class="error-message-text"></div>
                 </div>
                 <div class="form-group margin-filas opciones">
-                    <h6 for="transtorno-bipolar">Trastorno Bipolar con Características Psicóticas</h6>
+                    <h6 for="trastorno-bipolar">Trastorno Bipolar con Características Psicóticas</h6>
                     <div class="btn-group">
-                        <button id="transtorno-bipolar-si" class="btn btn-choice mb-2">Sí</button>
-                        <button id="transtorno-bipolar-no" class="btn btn-choice mb-2">No</button>
+                        <button id="trastorno-bipolar-si" class="btn btn-choice mb-2">Sí</button>
+                        <button id="trastorno-bipolar-no" class="btn btn-choice mb-2">No</button>
                     </div>
-                    <div id="error-transtorno-bipolar" class="error-message-text"></div>
+                    <div id="error-trastorno-bipolar" class="error-message-text"></div>
                 </div>
                 <div class="form-group margin-filas opciones">
                     <h6 for="antecedentes-familiares">Antecedentes Familiares Psiquiátricos</h6>
