--- a/demo/src/main/resources/static/formulario/formulario.html
+++ b/demo/src/main/resources/static/formulario/formulario.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="../index.css">
     <link rel="stylesheet" href="formulario.css">
 </head>
 
@@ -17,7 +18,6 @@
         <div class="row data-columns">
             <h2>Datos del Paciente</h2>
             <div class="col-md-6">
-
                 <div class="gray-box">
                     <div class="form-group margin-filas">
                         <label for="nombre">Nombre</label>
