--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -32,7 +32,7 @@
             </a>
         </div>
         <div class="contenedor">
-            <a href="" class="button">
+            <a href="dataset/exportar.html" class="button">
                 <i class="fas fa-solid fa-file-contract fa-3x button-icon"></i>
                 <!-- <i class="fas fa-solid fa-file-export fa-3x button-icon"></i> -->
                 <h2 class="button-title">Exportar Datos</h2>
