boton volver en todas las pantllas y arreglos visuales de otros botones

--- a/demo/src/main/resources/static/formulario/diagnostico.html
+++ b/demo/src/main/resources/static/formulario/diagnostico.html
@@ -64,12 +64,12 @@
         </div>
 
         <div class="button-container-popup">
-            <button id="confirmar-diagnostico" class="btn-consultar btn-rounded" onclick="guardarRegistro('Confirmado')"
+            <button id="confirmar-diagnostico" class="btn-custom btn-rounded" onclick="guardarRegistro('Confirmado')"
                 style="margin: 20px;">
                 <i class="fas fa-solid fa-check"></i> Confirmar diagnóstico
             </button>
-            <button id="rechazar-diagnostico" class="btn-red btn-rounded" onclick="mostrarJustificacion()"
-                style="margin: 20px;">
+            <button id="rechazar-diagnostico" class="btn-custom btn-rounded" onclick="mostrarJustificacion()"
+                style="margin: 20px; background-color: #dc3545;">
                 <i class="fas fa-ban"></i>
                 Rechazar diagnóstico
             </button>
@@ -91,8 +91,8 @@
 
             <div class="row">
                 <div class="col-md-12">
-                    <button id="rechazar-diagnostico" class="btn btn-danger btn-rounded"
-                        onclick="guardarRegistro('Rechazado')" style="margin-top: 10px;">
+                    <button id="rechazar-diagnostico" class="btn-custom btn-rounded"
+                        onclick="guardarRegistro('Rechazado')" style="margin-top: 10px; background-color: #dc3545;">
                         <i class="fas fa-solid fa-check-double"></i> Confirmar rechazo
                     </button>
                 </div>
