--- a/demo/src/main/resources/static/dataset/exportar.html
+++ b/demo/src/main/resources/static/dataset/exportar.html
@@ -19,7 +19,7 @@
         <h1>Exportar Datos</h1>
         <p class="centered-text">Al hacer clic en el botón de descarga, se exportarán todos los casos cargados en un archivo Excel. Este
             proceso puede tardar unos momentos dependiendo de la cantidad de datos.</p>
-        <button id="btnDownload" class="btn-volver">
+        <button id="btnDownload" class="btn-custom">
             <i class="fas fa-solid fa-download"></i> Descargar Excel
         </button>
     </div>
@@ -34,8 +34,8 @@
         </div>
     </div>
     
-    <div class="btn-volver-container">
-        <button class="btn-volver" id="volver" onclick="volver()">
+    <div class="btn-custom-container">
+        <button class="btn-back" id="back" onclick="volver()">
             Volver
         </button>
     </div>
