--- a/demo/src/main/resources/static/formulario/formulario.html
+++ b/demo/src/main/resources/static/formulario/formulario.html
@@ -116,6 +116,11 @@
         <!-- endregion Popup -->
     </div>
 
+    <div class="footer">
+        <strong>Velazquez, Brenda. Zabalet, Candela.</strong>
+        <p><strong>Universidad de Morón.</strong></p>
+    </div>
+    
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <script src="formulario.js"></script>
