pantalla "Cosultar Casos"

--- a/demo/src/main/resources/static/dataset/exportar.html
+++ b/demo/src/main/resources/static/dataset/exportar.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="container">
-        <h1>Exportar Datos</h1>
+        <h1 class="title">Exportar Datos</h1>
         <p class="centered-text">Al hacer clic en el botón de descarga, se exportarán todos los casos cargados en un archivo Excel. Este
             proceso puede tardar unos momentos dependiendo de la cantidad de datos.</p>
         <button id="btnDownload" class="btn-custom">
