fix en icono de imagen de estudio

--- a/demo/src/main/resources/static/formulario/complementarios.html
+++ b/demo/src/main/resources/static/formulario/complementarios.html
@@ -50,7 +50,8 @@
                     <img src="#" alt="Imagen Estudio" class="image-preview" id="imagen-preview"
                         style="display: none;" />
                     <div class="insert-photo-message" id="insert-photo-message">
-                        <i class="fas fa-regular fa-file-image 3x button-icon"></i>
+                        <i class="fas fa-regular fa-file-image 3x button-icon" style="
+                        color:#009587; font-size:26px; cursor:pointer;"></i>
                         Insertar Foto
                     </div>
                 </div>
