pantalla "Ver detalle paciente" incompleta

--- a/demo/src/main/resources/static/formulario/sintomasNegativos.html
+++ b/demo/src/main/resources/static/formulario/sintomasNegativos.html
@@ -3,7 +3,7 @@
     <div class="gray-box">
 
         <div id="sintomas-negativos-duracion-id" class="form-group margin-filas">
-            <h6 for="sintomas-negativos-duracion">Duración de los Síntomas negativos</h6>
+            <h6 for="sintomas-negativos-duracion">Duración de los síntomas negativos</h6>
             <!-- <input type="number" class="form-control" id="negativos-duracion" name="negativos-duracion"
                 placeholder="Ingrese la duración"> -->
                 <select class="form-control" id="sintomas-negativos-duracion" name="sintomas-negativos-duracion" required>
