--- a/demo/src/main/resources/static/formulario/sintomasPositivos.html
+++ b/demo/src/main/resources/static/formulario/sintomasPositivos.html
@@ -51,117 +51,54 @@
                     <!-- <option value="-1" selected>Seleccioná una opción</option> -->
                 </select>
             </div>
-            <div class="multiselect">
-              <div class="selectBox" onclick="showCheckboxes()">
-                  <select>
-                      <option>Seleccione las opciones</option>
-                  </select>
-                  <div class="overSelect"></div>
-              </div>
-              <div id="checkboxes">
-                  <label><input type="checkbox" name="lenguaje[]" value="lenguaje-sin-particularidades" onclick="unselectLenguaje(value, name)"/>sin particularidades</label>
-                  <label><input type="checkbox" name="lenguaje[]" value="lenguaje-taquilalia"/>taquilalia</label>
-                  <label><input type="checkbox" name="lenguaje[]" value="lenguaje-verborragia"/>verborragia</label>
-                  <label><input type="checkbox" name="lenguaje[]" value="lenguaje-bradilalia"/>bradilalia</label>
-                  <label><input type="checkbox" name="lenguaje[]"value="lenguaje-latencia"/>latencia de respuesta</label>
-                  <label><input type="checkbox" name="lenguaje[]" value="lenguaje-mutismo"/>mutismo</label>
-                  <label><input type="checkbox" name="lenguaje[]" value="lenguaje-musitaciones"/>musitaciones</label>
-                  <label><input type="checkbox" name="lenguaje[]" value="lenguaje-soliloquio"/>soliloquio</label>
-                  <label><input type="checkbox" name="lenguaje[]" value="lenguaje-neologismo"/>neologismo</label>
-                  <label><input type="checkbox" name="lenguaje[]" value="lenguaje-jergafasia"/>jergafasia</label>
-                  <label><input type="checkbox" name="lenguaje[]" value="lenguaje-ecolalia"/>ecolalia</label>
-                  <label><input type="checkbox" name="lenguaje[]" value="lenguaje-pararrespuesta"/>pararrespuesta</label>
-                  <label><input type="checkbox" name="lenguaje[]" value="lenguaje-estereotipia"/>estereotipia verbal</label>
-                  <label><input type="checkbox" name="lenguaje[]" value="lenguaje-verbigeracion"/>verbigeracion</label>
-                  <label><input type="checkbox" name="lenguaje[]" value="lenguaje-homofonia"/>asociación por homofonía</label>
-              </div>
- 
 
-          <!-- 
-            <details>
-                <summary>Lenguaje</summary>
-                <form>
-                  <fieldset>
-                    <ul>
-                      <li>
-                        <label for="lenguaje-sin-particularidades">Sin particularidades <input type="checkbox" id="lenguaje-sin-particularidades" name="tipo-lenguaje-id[]" class="lenguaje-sin-particularidades" value="lenguaje-sin-particularidades" onclick="unselectLenguaje(value, name)"></label>
-                      </li>
-                      <li>
-                        <label for="lenguaje-taquilalia">Taquilalia<input type="checkbox" id="lenguaje-taquilalia" name="lenguaje[]" value="lenguaje-taquilalia"></label>
-                      </li>
-                      <li>
-                        <label for="lenguaje-verborragia">Verborragia<input type="checkbox" id="lenguaje-verborragia"  name="lenguaje[]" value="lenguaje-verborragia"></label>
-                      </li>
-                      <li>
-                        <label for="lenguaje-bradilalia">Bradilalia <input type="checkbox" id="lenguaje-bradilalia"  name="lenguaje[]" value="lenguaje-bradilalia"></label>
-                      </li>
-                      <li>
-                        <label for="lenguaje-latencia">Latencia de respuesta<input type="checkbox" id="lenguaje-latencia"  name="lenguaje[]" value="lenguaje-latencia"></label>
-                      </li>
-                      <li>
-                        <label for="lenguaje-mutismo">Mutismmo<input type="checkbox" id="lenguaje-mutismo"  name="lenguaje[]" value="lenguaje-mutismo"></label>
-                      </li>
-                      <li>
-                        <label for="lenguaje-musitaciones">Musitaciones<input type="checkbox" id="lenguaje-musitaciones"  name="lenguaje[]" value="lenguaje-musitaciones"></label>
-                      </li>
-                      <li>
-                        <label for="lenguaje-soliloquio">Soliloquio <input type="checkbox" id="lenguaje-soliloquio"  name="lenguaje[]" value="lenguaje-soliloquio"></label>
-                      </li>
-                      <li>
-                        <label for="lenguaje-noelogismo">Neologismo<input type="checkbox" id="lenguaje-noelogismo"  name="lenguaje[]" value="lenguaje-noelogismo"></label>
-                      </li>
-                      <li>
-                        <label for="lenguaje-jergafasia">Jergafasia<input type="checkbox" id="lenguaje-jergafasia"  name="lenguaje[]" value="lenguaje-jergafasia"></label>
-                      </li>
-                      <li>
-                        <label for="lenguaje-ecolalia">Ecolalia<input type="checkbox" id="lenguaje-ecolalia"  name="lenguaje[]" value="lenguaje-ecolalia"></label>
-                      </li>
-                      <li>
-                        <label for="lenguaje-pararrespuesta">Pararrespuesta <input type="checkbox" id="lenguaje-pararrespuesta"  name="lenguaje[]" value="lenguaje-pararrespuesta"></label>
-                      </li>
-                      <li>
-                        <label for="lenguaje-estereotipia">Estereotipia verbal<input type="checkbox" id="lenguaje-estereotipia"  name="lenguaje[]" value="lenguaje-estereotipia"></label>
-                      </li>
-                      <li>
-                        <label for="lenguaje-verbigeracion">Verbigeración<input type="checkbox" id="lenguaje-verbigeracion"  name="lenguaje[]" value="lenguaje-verbigeracion"></label>
-                      </li>
-                      <li>
-                        <label for="lenguaje-homofonia">Asociación por homofonía<input type="checkbox" id="lenguaje-homofonia"  name="lenguaje[]" value="lenguaje-homofonia"></label>
-                      </li>
-                    </ul>
-                  </fieldset>
-                </form>
-              
-              </details>-->
-            <!-- <div id="tipo-lenguaje-id" class="form-group margin-filas">
-                <h6 for="tipo-lenguaje">Lenguaje</h6>
-                <div id="selected-options" class="selected-options"></div>
-                <select class="form-control" id="lenguaje" name="lenguaje" multiple required>
-                    <option value="lenguaje-sin-particularidades">Sin particularidades</option>
-                    <option value="lenguaje-taquilalia">Taquilalia</option>
-                    <option value="lenguaje-verborragia">Verborragia</option>
-                    <option value="lenguaje-bradilalia">Bradilalia</option>
-                    <option value="lenguaje-latencia">Latencia de respuesta</option>
-                    <option value="lenguaje-mutismo">Mutismo</option>
-                    <option value="lenguaje-musitaciones">Musitaciones</option>
-                    <option value="lenguaje-soliloquio">Soliloquio</option>
-                    <option value="lenguaje-noelogismo">Noelogísmo</option>
-                    <option value="lenguaje-jergafasia">Jergafasia</option> HICE HASTA ACA
-                    <option value="lenguaje-ecolalia">Ecolalia</option>
-                    <option value="lenguaje-pararrespuesta">Pararrespuesta</option>
-                    <option value="lenguaje-estereotipia-verbal">Estereotipia verbal</option>
-                    <option value="lenguaje-verbigeracion">Verbigeración</option>
-                    <option value="lenguaje-homofonia">Asociación por homofonía</option>
-                    <option value="-1" selected>Seleccioná una opción</option> 
-                </select>
-            </div>-->
+            <div id="tipo-pensamiento-id" class="form-group margin-filas">
+              <h6><b>Lenguaje</b></h6>
+              <div  id="lenguaje" class="checkboxes">
+                <div class="form-control">
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-sin-particularidades" onclick="unselect(value, name)"/>Sin particularidades</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-taquilalia"/>Taquilalia</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-verborragia"/>Verborragia</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-bradilalia"/>Bradilalia</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]"value="lenguaje-latencia"/>Latencia de respuesta</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-mutismo"/>Mutismo</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-musitaciones"/>Musitaciones</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-soliloquio"/>Soliloquio</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-neologismo"/>Neologismo</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-jergafasia"/>Jergafasia</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-ecolalia"/>Ecolalia</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-pararrespuesta"/>Pararrespuesta</label>
+                  <label id="check"><input type="checkbox"  name="lenguaje[]" value="lenguaje-estereotipia"/>Estereotipia verbal</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-verbigeracion"/>Verbigeracion</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-homofonia"/>Asociación por homofonía</label>
+                </div>
+              </div>
+            </div>
 
+            <div id="tipo-pensamiento-id" class="form-group margin-filas">
+              <h6><b>Pensamiento</b></h6>
+              <div  id="pensamiento" class="checkboxes">
+                <div class="form-control">
+                  <label id="check"><input type="checkbox" name="pensamiento[]" value="lenguaje-sin-particularidades" onclick="unselect(value, name)"/>Sin particularidades</label>
+                  <label id="check"><input type="checkbox" name="pensamiento[]" value="pensamiento-tangencial"/>Tangencial</label>
+                  <label id="check"><input type="checkbox" name="pensamiento[]" value="pensamiento-circunstancial"/>Circunstancial</label>
+                  <label id="check"><input type="checkbox" name="pensamiento[]" value="pensamiento-meticulosidad"/>Meticulosidad</label>
+                  <label id="check"><input type="checkbox" name="pensamiento[]"value="pensamiento-viscosidad"/>Viscosidad</label>
+                  <label id="check"><input type="checkbox" name="pensamiento[]" value="pensamiento-concreto"/>Pensamiento concreto</label>
+                  <label id="check"><input type="checkbox" name="pensamiento[]" value="pensamiento-idea-fija"/>Idea fija</label>
+                  <label id="check"><input type="checkbox" name="pensamiento[]" value="pensamiento-interceptacion-pensamiento"/>Interceptación del pensamiento</label>
+                  <label id="check"><input type="checkbox" name="pensamiento[]" value="pensamiento-disgregacion"/>Disgregación</label>
+                  <label id="check"><input type="checkbox" name="pensamiento[]" value="pensamiento-incoherencia"/>Incoherencia</label>
+                </div>
+              </div>
+            </div>
+            
+<!--
             <div id="tipo-pensamiento-id" class="form-group margin-filas">
                 <h6 for="tipo-pensamiento">Pensamiento</h6>
                 <div id="selected-options" class="selected-options"></div>
                 <select class="form-control" id="pensamiento" name="pensamiento" multiple required>
                     <option value="pensamiento-sin-particularidades">Sin particularidades</option>
-                    <!-- <option value="pensamiento-conserva-idea-directriz">Conserva idea directriz</option> -->
                     <option value="pensamiento-tangencial">Tangencial</option>
                     <option value="pensamiento-circunstancial">Circunstancial</option>
                     <option value="pensamiento-meticulosidad">Meticulosidad</option>
@@ -173,7 +110,7 @@
                     <option value="pensamiento-incoherencia">Incoherencia</option>
                     <option value="-1" selected>Seleccioná una opción</option>
                 </select>
-            </div>
+            </div>-->
 
             <div id="tipo-ritmo-pensamiento-id" class="form-group margin-filas">
                 <h6 for="tipo-ritmo-pensamiento">Ritmo del pensamiento</h6>
@@ -208,24 +145,5 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </body>
-<script>
-  var expanded = false;
 
-  function showCheckboxes() {
-      var checkboxes = document.getElementById("checkboxes");
-      if (!expanded) {
-          checkboxes.style.display = "block";
-          expanded = true;
-      } else {
-          checkboxes.style.display = "none";
-          expanded = false;
-      }
-  }
-
-  document.querySelectorAll('#checkboxes input[type="checkbox"]').forEach(function(checkbox) {
-      checkbox.addEventListener('change', function() {
-          this.parentElement.classList.toggle('selected', this.checked);
-      });
-  });
-</script>
 </html>
